@@ -1,3 +1,10 @@
+2004-02-13  David Jee  <djee@redhat.com>
+
+	* java/awt/Component.java
+        (show): Only do something if component is invisible at the moment.
+        (hide): Only do something if component is visible at the moment.
+        (reshape): If lightweight, erase old bounds and repaint new bounds.
+
 2004-02-13  Kim Ho  <kho@redhat.com>
 
 	* Makefile.am: Updated for new file.
